[tool.poetry]
name = "geodesy-plan"
version = "0.1.0"
description = ""
authors = ["Nick <nikolai.in@tuta.io>"]
readme = "README.md"
packages = [{ include = "geodesy_plan" }]

[tool.poetry.dependencies]
python = "3.11.2"
numpy = "^1.24.2"
scipy = "^1.10.1"
xlwings = "^0.30.0"
pandas = "^1.5.3"
shapely = "^2.0.1"
openpyxl = "^3.1.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
